projects section done

--- a/components/Header/Header.scss
+++ b/components/Header/Header.scss
@@ -66,9 +66,9 @@ header {
     left: 50%;
     height: 4.5rem;
     width: 100%;
-    border: 1px solid rgba(255, 255, 255, 0.4);
-    background-color: rgba(255, 255, 255, 0.8);
-    box-shadow: 0 0 0.5rem 0 rgba(0, 0, 0, 0.03);
+    border: 1px solid #ffffff66;
+    background-color: #ffffffcc;
+    box-shadow: 0 0 0.5rem 0 #00000008;
     backdrop-filter: blur(0.5rem);
     border-radius: 0;
 
