--- a/components/Intro/Intro.scss
+++ b/components/Intro/Intro.scss
@@ -21,10 +21,10 @@
 
   &__dennis {
     border-radius: 100px;
-    background-color: rgba(231, 190, 255, 0.486);
-    border: 4px solid rgb(255, 255, 255);
+    background-color: #e7beff7c;
+    border: 4px solid $white;
     object-fit: cover;
-    box-shadow: 2px 2px 3px white;
+    box-shadow: 2px 2px 3px $white;
   }
 
   &__emoji {
@@ -83,7 +83,7 @@
     border-radius: 99px;
 
     &:hover {
-      background-color: rgb(234, 255, 234);
+      background-color: #eaffea;
     }
 
     &:active {
@@ -93,7 +93,7 @@
   }
 
   &__github-icon {
-    color: rgb(14, 17, 24);
+    color: #0e1118;
 
     &:active {
       transform: translateY(3px);
@@ -102,7 +102,7 @@
   }
 
   &__linked-in-icon {
-    color: rgb(18, 107, 196);
+    color: #126bc4;
 
     &:active {
       transform: translateY(3px);
