--- a/components/About/About.scss
+++ b/components/About/About.scss
@@ -4,6 +4,8 @@
   max-width: 50rem;
   padding-left: 1rem;
   padding-right: 1rem;
+  
+  scroll-margin-top: 7rem;
 
   .about-me-text {
     margin-bottom: 1.5rem;
