--- a/components/Header/Header.scss
+++ b/components/Header/Header.scss
@@ -1,4 +1,5 @@
 @import "../../sass/colors";
+@import "../../sass/mixins";
 
 header {
   position: relative;
@@ -10,8 +11,7 @@ header {
     justify-content: center;
     left: 50%;
     height: 3rem;
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
+    padding: 0.5rem 0;
     transform: translateX(-50%);
 
     @media (min-width: 640px) {
@@ -23,7 +23,6 @@ header {
       display: flex;
       width: 22rem;
       flex-wrap: wrap;
-      justify-items: center;
       justify-content: center;
       font-size: 0.9rem;
       font-weight: medium;
@@ -34,6 +33,7 @@ header {
         flex-wrap: nowrap;
         gap: 1.25rem;
       }
+
       li {
         height: 75%;
         display: flex;
@@ -41,20 +41,17 @@ header {
         justify-content: center;
 
         .link {
-          color: $gray-500;
-          display: flex;
-          width: 100%;
-          justify-content: center;
-          align-items: center;
-          padding-top: 0.75rem;
-          padding-bottom: 0.75rem;
-          padding-left: 0.75rem;
-          padding-right: 0.75rem;
-          transition: 150ms;
+          @include linkStyles;
 
           &:hover {
             color: $gray-950;
           }
+        }
+
+        .link-active {
+          @include linkStyles;
+          color: $gray-950;
+          font-weight: bold;
         }
       }
     }
@@ -68,7 +65,7 @@ header {
     width: 100%;
     border: 1px solid #ffffff66;
     background-color: #ffffffcc;
-    box-shadow: 0 0 0.5rem 0 #00000008;
+    box-shadow: 0 0 0.5rem 0 rgba(0, 0, 0, 0.03);
     backdrop-filter: blur(0.5rem);
     border-radius: 0;
 
